# Tarea3_EDA

./: .gitignore  CMakeLists.txt  README
include/trees/: Item.hpp  treeList.hpp  treeSO.hpp
src/: Item.cpp  treeList.cpp  treeListNode.cpp  treeSO.cpp
tests/: test.cpp
